# HIDra

./: .clang-format  .commitlintrc.json  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  package.json  sdkconfig  sdkconfig.defaults
.husky/: pre-commit
docs/: blueprint.md
examples/master_test_app/: CMakeLists.txt  version.h.in
examples/master_test_app/main/: CMakeLists.txt  main.c
firmware/: CMakeLists.txt  sdkconfig.defaults  version.h.in
firmware/main/: CMakeLists.txt  main.c  usb_descriptors.c  usb_descriptors.h  version.c
libs/hidra/: CMakeLists.txt  hidra.c  hidra.h  version.c  version.h.in
main/: main.c
protocol/: hidra_protocol.h
tests/harness/: test_hidra_slave.py
tests/unit/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
tests/unit/main/: CMakeLists.txt  idf_component.yml  test_config.c  test_hid_reports.c  test_hidra_master.c  test_i2c_protocol.c  test_main.c  test_protocol.c  test_status_register.c  test_usb_descriptors.c  tusb_config.h
